# ccg

./: .gitignore  README.md
prototype/: .gitignore  Makefile
prototype/src/: main.cpp
prototype/src/engine/: card.cpp  card.hpp
prototype/src/engine/ecs/: component.cpp  component.hpp  ecs.hpp  entity.cpp  entity.hpp  system.cpp  system.hpp
prototype/src/engine/ecs/components/: gameZone.cpp  gameZone.hpp
prototype/src/engine/ecs/systems/: terminalRender.cpp  terminalRender.hpp
prototype/src/render/terminal/: terminal.cpp  terminal.hpp
rust-prototype/: .gitignore  Cargo.toml
rust-prototype-2/: Cargo.toml
rust-prototype-2/src/: main.rs
rust-prototype-2/src/engine/: ability.rs  action.rs  event.rs  mod.rs  phase.rs  zone.rs
rust-prototype-2/src/game/: abilities.rs  init.rs  mod.rs  print.rs  rules.rs  zone.rs
rust-prototype/.cargo/: config.toml
rust-prototype/src/: main.rs
rust-prototype/src/common/network/: transport.rs
rust-prototype/src/engine/: mod.rs  window.rs
rust-prototype/src/engine/debug/: camera_controller.rs  mod.rs
rust-prototype/src/game/: actions.rs  grab.rs  mod.rs  state.rs
rust-prototype/src/game/card/: mod.rs
rust-prototype/src/game/card/base/: mod.rs
rust-prototype/src/game/card/object/: mod.rs  proto.rs  spawn.rs  text.rs  zone.rs
rust-prototype/src/game/card/rules/: mod.rs
